elmsim_PYTHON = mainPIDs.py\
                modeConsts.py\
                pidFuncs.py\
                ecu.py\
                __init__.py 

elmsimdir = $(ELMSIMDIR)/ecu

CLEANFILES = mainPIDs.pyc\
             modeConsts.pyc\
             pidFuncs.pyc\
             ecu.pyc\
             __init__.pyc 

DISTCLEANFILES = Makefile Makefile.in
