ecu_PYTHON = mainPIDs.py\
                modeConsts.py\
                pidFuncs.py\
                ecu.py\
                ecuData.py\
                __init__.py 

ecudir = $(ELMSIMDIR)/ecu

CLEANFILES = mainPIDs.pyc\
             modeConsts.pyc\
             pidFuncs.pyc\
             ecu.pyc\
             ecuData.pyc\
             __init__.pyc 

DISTCLEANFILES = Makefile Makefile.in
