elmsim_PYTHON = atCommands.py\
                atFunctions.py\
                elmDevice.py\
                elmport.py\
                __init__.py 

elmsimdir = $(ELMSIMDIR)/elmDevice

CLEANFILES = atCommands.pyc\
             atFunctions.pyc\
             elmDevice.pyc\
             elmport.pyc\
             __init__.pyc 

DISTCLEANFILES = Makefile Makefile.in
