elmDevice_PYTHON = atCommands.py\
                   atFunctions.py\
                   elmDevice.py\
                   elmport.py\
                   deviceCommands.py\
                   deviceFunctions.py\
                   __init__.py 

elmDevicedir = $(ELMSIMDIR)/elmDevice

CLEANFILES = atCommands.pyc\
             atFunctions.pyc\
             elmDevice.pyc\
             elmport.pyc\
             deviceCommands.pyc\
             deviceFunctions.pyc\
             __init__.pyc 

DISTCLEANFILES = Makefile Makefile.in
